``` chore(changelog): 更新CHANGELOG文件

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 CHANGELOG
 ==============
+25.3.5（2025-09-11）
+【新增】新增了后台云资源显示相关的引用课程，能够批量替换课程中的云资源。
+【优化】合并了学员和员工的登录日志，优化登录日志和在线用户的布局。
+【修复】修复网校后台开启邮箱注册，微网校无法进行邮箱注册。
+【修复】修复课程课时添加子任务时，选择文档/文件/ppt/音视频后，点击保存报错。
+【修复】修复教师创建试卷页面填空题设置的分数与学员端填空题显示的分数不一致问题。
+【修复】修复学员在微信内新版微网校观看视频时无法往回拖动进度条。
 
 25.3.4（2025-09-07）
 【修复】题库创建试卷无法添加题目的问题。
