--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -3195,6 +3195,7 @@ homepage.learning_course.content_title: 'Learning Courses'
 homepage.learning_course.teacher_name: 'Teacher ：%nickname%'
 homepage.learning_course.learning_progress: '%percent% finished'
 homepage.recommend_classroom.content_title: 'Recommend Classes'
+homepage.recommend_classroom.content_subtitle: 'The class-based learning system offers you more course-related services.'
 homepage.recommend_classroom.more: "More %moreClassrooms%\n"
 site.datagrid.filter.class_more: More
 homepage.article.content_title: 'Latest %article_name%'
