chore: update version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,15 @@
 CHANGELOG
 ==============
+25.3.6（2025-09-18）
+【新增】PC新增题库图片预览功能（缩放、翻转）
+【新增】H5新增题库图片预览功能（缩放、翻转）
+【优化】修改题库图片预览界面背景色成白色，解决png图片在灰色背景图片预览界面显示不清晰的问题
+【修复】修复题库题目管理无法添加题目
+【修复】修复当题库绑定的课程开启AI伴学助手，题库未单独开启AI伴学助手，AI伴学助手显示逻辑错误
+【修复】修复当用户注册方式为手机注册/邮箱注册时，后台管理添加员工不显示密码隐藏按钮
+【修复】修复题库试卷管理新增试题页面显示错乱
+【修复】修复学员考试结果详情页面样式错误
+
 25.3.5（2025-09-11）
 【新增】新增了后台云资源显示相关的引用课程，能够批量替换课程中的云资源。
 【优化】合并了学员和员工的登录日志，优化登录日志和在线用户的布局。
