bugfix: #114220 修正优惠券相关文案错误

--- a/app/Resources/translations/js.zh_CN.yml
+++ b/app/Resources/translations/js.zh_CN.yml
@@ -2123,16 +2123,16 @@ decorate.amount_of_goods: 商品数量
 decorate.creation_time: 创建时间
 decorate.operate: 操作
 decorate.search_class: 搜索班级
-decorate.coupon: 优惠卷
+decorate.coupon: 优惠券
 decorate.only_show_coupons_no_expired: 仅显示未过期的优惠券
 decorate.title: 标题栏
 decorate.show: 显示
 decorate.do_not_show: 不显示
 decorate.coupon_selection: 优惠券选择
-decorate.add_coupon: 添加优惠卷
+decorate.add_coupon: 添加优惠券
 decorate.choose_a_coupon: 选择优惠券
-decorate.search_for_coupons: 搜索优惠卷
-decorate.coupon_name: 优惠卷名称
+decorate.search_for_coupons: 搜索优惠券
+decorate.coupon_name: 优惠券名称
 decorate.prefix: 前缀
 decorate.offer_content: 优惠内容
 decorate.discount: 折扣
