--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,11 +4,19 @@ CHANGELOG
 【新增】PC新增题库图片预览功能（缩放、翻转）
 【新增】H5新增题库图片预览功能（缩放、翻转）
 【优化】修改题库图片预览界面背景色成白色，解决png图片在灰色背景图片预览界面显示不清晰的问题
+【优化】大数据量时，学员管理-学习数据统计-学员课时学习数据统计导出会卡住的问题 #114280
 【修复】修复题库题目管理无法添加题目
 【修复】修复当题库绑定的课程开启AI伴学助手，题库未单独开启AI伴学助手，AI伴学助手显示逻辑错误
 【修复】修复当用户注册方式为手机注册/邮箱注册时，后台管理添加员工不显示密码隐藏按钮
 【修复】修复题库试卷管理新增试题页面显示错乱
 【修复】修复学员考试结果详情页面样式错误
+【修复】班级和班级的原课程都是设置的未显示价格，学员加入班级后在班级目录里面可以查看到课程价格 #114111, #114086
+【修复】班级数据概览里学员课程完成100%，但是该课程进度框的图标显示为灰 #104470
+【修复】学员在微信内新版微网校里观看视频时无法往回拖动进度条(课时任务完成条件学到最后，禁止拖拽) #112492
+【修复】创建试卷页面填空题设置为每空2分，保存试卷页面显示为每题0分，点击保存试卷提示保存成功，学员端进入该试卷学习，填空题显示为0分 #113789
+【修复】课程学习有效期设置的固定有效期，但到时间后点击学习仍提示“学习时间未到，无法学习任务，请在学习 有效期内进行学习” #111333
+【修复】特定条件下，点击编辑课时没有反应 #102817
+【修复】课程商品详情页--复制的课程图片课时图片显示null #113691
 
 25.3.5（2025-09-11）
 【新增】新增了后台云资源显示相关的引用课程，能够批量替换课程中的云资源。
