--- a/app/Resources/translations/js.zh_CN.yml
+++ b/app/Resources/translations/js.zh_CN.yml
@@ -1180,14 +1180,12 @@ admin.course.close_course_hint: 关闭后仍在有效期的学员无法继续学
 admin.close.btn.confirm_close: 确认关闭？
 admin.close.btn.confirm_hide: 确认下架？
 admin.close.btn.confirm_publish: 确认发布？
-admin.course.close_success_hint: 已关闭页面显示
 admin.course.hide_course_hint: 课程下架后将不在前台展示，学员无法在首页和列表页查看
 admin.course.delist_course_hint: 课程下架后将不在前台展示，学员无法查看
 admin.course.hide_success_hint: 课程关闭成功！
 admin.course.show_success_hint: 已开启页面
 admin.course.delist_success_hint: 课程下架成功！
 admin.course.publish_hint: 确认发布？
-admin.course.publish_success_hint: 课程发布成功！
 admin.course.unknow_error_hint: 未知错误
 admin.course.delete_hint: 删除课程，将删除课程的章节、课时、学员等信息。真的要删除该课程吗？
 admin.course.mall_goods_exist.delete_hint: 删除课程，将删除课程的章节、课时、学员等信息。并且该产品已在营销商城中有对应的商品，将同时删除已在营销商城中的对应商品，真的要删除该课程吗？
@@ -2378,3 +2376,11 @@ course.market_setting.contract.model.handSignature: 手写签名
 course.market_setting.contract.model.partyBName: 乙方姓名
 course.market_setting.contract.model.iDNumber: 身份证号
 course.market_setting.contract.model.contactInformation: 联系方式
+
+tab.course_tab.my_courses: 我的课程
+tab.course_tab.enter_course_name: 请输入课程名称
+tab.course_tab.live_class_schedule: 直播课表
+tab.course_tab.learning: 学习中
+tab.course_tab.have_completed: 已学完
+tab.course_tab.have_expired: 已过期
+tab.course_tab.collect: 收藏
