chore: update changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,22 @@
 CHANGELOG
 ==============
+
+25.3.7（2025-09-29）
+
+【优化】云视频指纹的字体大小、颜色各端统一 #113939
+【优化】管理后台直播管理列表展示，直播任务所在班级 #113940
+【优化】我的直播页面改为直播课表 #114275
+【优化】完善英文版翻译 #113938
+【修复】课程考试批阅--查看学员结果详情页面被撑开的问题。#112875
+【修复】当 App 功能被关闭时，点击小程序注册账号点击下一步没有反应 #112989
+【修复】授权客户—行业主题自适应微网校班级模块点击更多不显示班级 #112725
+【修复】班级数据概览里学员课程完成100%，但是该课程进度框的图标显示为灰 #104470
+【修复】知享学堂 IOS 4.15.4 最新版本内作业评语看不到，老版本正常 #114037
+【修复】关闭防刷验证后，学生评价回复会卡在正在发表 无法回复 #114245
+【修复】H5 微网校-学生题库练习内考试内容显示不全也无法下滑 #114268
+【修复】特定条件下，学生题库练习内考试联系点击答题出现报错：参数错误，请重试 #114268
+【修复】知享学堂安卓端学员观看视频，观看到最后存在着未调用finish 接口，导致无法完成学习的情况 #114266
+
 25.3.6（2025-09-18）
 【新增】PC新增题库图片预览功能（缩放、翻转）
 【新增】H5新增题库图片预览功能（缩放、翻转）
